Upgrading IntelliJ from 2025.1 to 2025.1.1 (#444)
* Upgrading IntelliJ from 2025.1 to 2025.1.1

* Migrate from `StartupActivity` (obsolete) -> `VcsRepositoryMappingListener`

Fixes #445